<?xml version="1.0" encoding="utf-8"?>
<layout
xmlns:android= "http://schemas.android.com/apk/res/android"
xmlns:app= "http://schemas.android.com/apk/res-auto"
xmlns:tools= "http://schemas.android.com/tools" >

    <data>
        <variable
            name="gvm"
            type="com.example.pennydrop.viewmodels.GameViewModel"/>
    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".fragments.GameFragment">

    <LinearLayout
        android:id="@+id/layoutCoinSlots"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/coinSlot1"
            layout="@layout/layout_coin_slot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:slot="@{gvm.slots[0]}"
            />

        <include
            android:id="@+id/coinSlot2"
            layout="@layout/layout_coin_slot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:slot="@{gvm.slots[1]}"
            />
<!--app:slotNum="@{2}"-->
        <include
            android:id="@+id/coinSlot3"
            layout="@layout/layout_coin_slot"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:slot="@{gvm.slots[2]}"
            />
<!--app:slotNum="@{3}"-->
        <include
            android:id="@+id/coinSlot4"
            layout="@layout/layout_coin_slot"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:slot="@{gvm.slots[3]}"
            />
<!--app:slotNum="@{4}"-->

        <include
            android:id="@+id/coinSlot5"
            layout="@layout/layout_coin_slot"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:slot="@{gvm.slots[4]}"
            />
<!--app:slotNum="@{5}"-->

        <!--The other four slots live down here-->
        <!-- They only differ by ID and slotNum values-->
    </LinearLayout>

    <include
        android:id="@+id/coinSlot6"
        layout="@layout/layout_coin_slot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutCoinSlots"
        app:slot="@{gvm.slots[5]}"
        />
<!-- app:slotNum="@{6}"-->
    <TextView
        android:id="@+id/textCurrentPlayerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/textCoinsLeft"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textCurrentPlayerCoinsLeft"
        android:layout_marginStart="32dp"
        android:text='@{gvm.currentPlayer.playerName ?? @string/na}'
        android:textSize="32sp"
        tools:text="Michael" />
<!--    android:text='@{vm.currentPlayer.playerName ?? @string/na}'-->

    <TextView
        android:id="@+id/textCurrentPlayerCoinsLeft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/textCoinsLeft"
        app:layout_constraintStart_toStartOf="@id/textCoinsLeft"
        app:layout_constraintTop_toBottomOf="@+id/coinSlot6"
        android:gravity="center"
        android:text='@{gvm.currentPlayer.pennies +""}'
        android:textSize="24sp"
        tools:text="10"/>
    <!--app:layout_constraintTop_toBottomOf="@+id/coinSlot6"-->

    <TextView
        android:id="@+id/textCoinsLeft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textCurrentPlayerCoinsLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/coins_left"
        android:layout_marginEnd="32dp"/>

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textCoinsLeft">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="@android:color/white"
            android:background="@{gvm.canRoll? @color/colorPrimary : @color/plainGray}"
            android:drawableEnd="@drawable/mdi_dice_6_black_24dp"
            android:drawableTint="@android:color/white"
            android:enabled="@{gvm.canRoll}"
            android:onClick="@{() -> gvm.roll()}"
            android:padding="10dp"
            android:text="@string/roll"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/or"
            android:textSize="24sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="10dp"
            android:text="@string/pass"
            android:background="@{gvm.canPass? @color/colorAccent : @color/plainGray}"
            android:drawableEnd="@drawable/ic_round_arrow_forward_24"
            android:enabled="@{gvm.canPass}"
            android:onClick="@{() -> gvm.pass()}"
            android:textColor="@color/white"
            android:drawableTint="@android:color/white"
           />

    </LinearLayout>
    <TextView
        android:id="@+id/textCurrentTurnInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:scrollbars="vertical"
        android:layout_gravity="center"
        android:text="@{gvm.currentTurnText}"
        app:layout_constraintBottom_toTopOf="@+id/textCurrentStandingInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutButtons"
        tools:text="Micheal rolled a 4.\nMicheal rolled a 6!"/>
    <TextView
        android:id="@+id/textCurrentStandingInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@{gvm.currentStandingsText}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCurrentTurnInfo"
        tools:text="Current ScoresL:\t\nhazel: 4 coins\n\tMichael: 7 coins"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>